Remove Cloudinary migration and integration documentation, along with related scripts and components, to streamline the project structure and focus on the new AppImage implementation.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "replace-nextimage": "node scripts/replace-cloudinary.js",
     "update-image-paths": "node scripts/update-image-paths.js",
     "validate-images": "node scripts/validate-image-paths.js",
-    "download-images": "node scripts/download-cloudinary-images.js"
+    "download-images": "node scripts/download-cloudinary-images.js",
+    "cleanup-cloudinary": "node scripts/cleanup-cloudinary.js"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
