Remove unused header component, Cloudinary-related actions, and migration documentation to streamline the project. Update image uploader to use local file uploads instead of Cloudinary, enhancing the overall structure and focus on Next.js image optimization.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "update-image-paths": "node scripts/update-image-paths.js",
     "validate-images": "node scripts/validate-image-paths.js",
     "download-images": "node scripts/download-cloudinary-images.js",
-    "cleanup-cloudinary": "node scripts/cleanup-cloudinary.js"
+    "cleanup-cloudinary": "node scripts/cleanup-cloudinary.js",
+    "cleanup-root": "node scripts/cleanup-root.js"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
